--- a/lab-css-layout/styles.css
+++ b/lab-css-layout/styles.css
@@ -7,9 +7,9 @@
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
   line-height: 1.6;
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   width: 100vw;
   gap: 2rem;
   background-color: #f5f5f5;
@@ -59,6 +59,7 @@ body {
 
 .member-name {
   color: #495057;
+  /* min-width: 160px; */
   flex-grow: 1;
 }
 
@@ -72,7 +73,7 @@ body {
 
 .container {
   background-color: white;
-  width: 64%;
+  width: 60%;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
